Many changes, too many to track. I've got to start using branches + small commits from here on out...

--- a/taskmanager/templates/dashboard/details/generic.html
+++ b/taskmanager/templates/dashboard/details/generic.html
@@ -12,6 +12,9 @@
 		<script type="text/javascript" src="/static/taskmanager/jquery.blockUI.js"></script>
 		<script type="text/javascript" src="/static/taskmanager/facebox/facebox.js"></script>
 
+		<!-- to satisfy csrf validation on AJAX requests -->
+		<script type="text/javascript" src="/static/taskmanager/taskmanager.js"></script>
+
 		<META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
 	</head>
 
