--- a/taskmanager/templates/dashboard/details/process.html
+++ b/taskmanager/templates/dashboard/details/process.html
@@ -17,30 +17,30 @@
 <div class="dialog_section tasks_section">tasks</div>
 
 <table cellpadding="0" cellspacing="0" class="task_list" style="width: 100%;">
-	{% for session in process.get_sessions %}
+	{% for instance in process.get_current_tasks %}
 	<tr>
 		<td style="width: 60px; padding-right: 0px;">
-			<div class="task_status {{ session.get_status }}">{{ session.get_status }}</div>
+			<div class="task_status {{ session.get_status }}">{{ instance.get_status }}</div>
 		</td>
 
 		<td>
 		<b>{{ session.task.name }}</b>
 		<div class="subtext">
 		{% if session.completed %}
-		completed on {{ session.completed_date|date }}, {{ session.completed_date|time }}
+		completed on {{ instance.completed_date|date }}, {{ instance.completed_date|time }}
 		{% else %}
-		state: {{ session.state }}
+		state: {{ instance.details }}
 		{% endif %}
 		</div>
 		</td>
 
 		<td class="command" style="text-align: right;">
-			<a href="/taskmanager/sessions/{{ session.id }}/details/" rel="facebox">details</a>
+			<a href="/taskmanager/tasks/{{ instance.id }}/details/" rel="facebox">details</a>
 		</td>
 	</tr>
 	{% endfor %}
 
-	{% for task in process.get_pending_tasks %}
+	{% for instance in process.get_pending_tasks %}
 	<tr>
 		<td style="width: 60px; padding-right: 0px;">
 			<div class="task_status {{ task.get_status }}">{{ task.get_status }}</div>
@@ -48,11 +48,11 @@
 
 		<td>
 		<b>{{ task.task.name }}</b>
-		<div class="subtext">scheduled for {{ task.schedule_date|date }}, {{ task.schedule_date|time }}</div>
+		<div class="subtext">scheduled for {{ instance.schedule_date|date }}, {{ instance.schedule_date|time }}</div>
 		</td>
 
 		<td class="command" style="text-align: right;">
-			<a href="/taskmanager/tasks/{{ task.id }}/details/" rel="facebox">details</a>
+			<a href="/taskmanager/tasks/{{ instance.id }}/details/" rel="facebox">details</a>
 		</td>
 	</tr>
 	{% endfor %}
