--- a/ASAP/templates/signup.html
+++ b/ASAP/templates/signup.html
@@ -4,16 +4,16 @@
 	<head>
 		<title>ASAP Pilot Sign-Up Form</title>
 
-		<link rel="stylesheet" href="/static/taskmanager/ASAP/css/signup.css" type="text/css" />
-		<link rel="stylesheet" href="/static/taskmanager/ASAP/css/bubble.css" type="text/css" />
-		<link rel="shortcut icon" type="image/x-icon" href="/static/taskmanager/ASAP/images/favicon.ico">
+		<link rel="stylesheet" href="/static/ASAP/css/signup.css" type="text/css" />
+		<link rel="stylesheet" href="/static/ASAP/css/bubble.css" type="text/css" />
+		<link rel="shortcut icon" type="image/x-icon" href="/static/ASAP/images/favicon.ico">
 
-		<script src="/static/taskmanager/ASAP/js/jquery-1.5.1.min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery.scrollTo-1.4.2-min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery-ui-1.8.10.custom.min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery.validate.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery-1.5.1.min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery.scrollTo-1.4.2-min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery-ui-1.8.10.custom.min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery.validate.js" language="Javascript" type="text/javascript"></script>
 
-		<script src="/static/taskmanager/ASAP/js/signup.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/signup.js" language="Javascript" type="text/javascript"></script>
 
 		<style>
 		div.formset { position: relative; margin-bottom: 1.5em; }
@@ -67,7 +67,7 @@
 				<h1>About the ASAP Pilot</h1>
 
 				<div class="content">
-					<img src="/static/taskmanager/ASAP/images/ASAP_Logo_Medium.png" width="330" height="233" style="float: right; margin-left: 5px; margin-top: 15px; margin-bottom: 5px;" />
+					<img src="/static/ASAP/images/ASAP_Logo_Medium.png" width="330" height="233" style="float: right; margin-left: 5px; margin-top: 15px; margin-bottom: 5px;" />
 
 					<p>
 					Thank you for agreeing to participate in the Adolescent & Young Adult Survivorship Action Plan (ASAP) Text Messaging Study. Taking part in this study includes three steps: (1) reading an online educational booklet, (2) picking your ASAP goals and (3) text-messaging.  You will now have the chance to look through and read the ASAP booklet.  Once you have clicked through the pages of the ASAP booklet you will be asked to choose 3 ASAP goals to help with your survivorship care.
@@ -96,7 +96,7 @@
 					</p>
 
 					<div style="margin-top: 2em;">
-						<a class="pdflink" href="/static/taskmanager/ASAP/ASAP%20Educational%20Module.pdf" target="_blank">
+						<a class="pdflink" href="/static/ASAP/ASAP%20Educational%20Module.pdf" target="_blank">
 						Adolescent & Young Adult Survivorship Action Plan Booklet
 						</a>
 					</div>
