--- a/ASAP/templates/thanks.html
+++ b/ASAP/templates/thanks.html
@@ -4,15 +4,15 @@
 	<head>
 		<title>ASAP Pilot Sign-Up Form: Completed!</title>
 
-		<link rel="stylesheet" href="/static/taskmanager/ASAP/css/signup.css" type="text/css" />
-		<link rel="shortcut icon" type="image/x-icon" href="/static/taskmanager/ASAP/images/favicon.ico">
+		<link rel="stylesheet" href="/static/ASAP/css/signup.css" type="text/css" />
+		<link rel="shortcut icon" type="image/x-icon" href="/static/ASAP/images/favicon.ico">
 
-		<script src="/static/taskmanager/ASAP/js/jquery-1.5.1.min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery.scrollTo-1.4.2-min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery-ui-1.8.10.custom.min.js" language="Javascript" type="text/javascript"></script>
-		<script src="/static/taskmanager/ASAP/js/jquery.validate.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery-1.5.1.min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery.scrollTo-1.4.2-min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery-ui-1.8.10.custom.min.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/jquery.validate.js" language="Javascript" type="text/javascript"></script>
 
-		<script src="/static/taskmanager/ASAP/js/signup.js" language="Javascript" type="text/javascript"></script>
+		<script src="/static/ASAP/js/signup.js" language="Javascript" type="text/javascript"></script>
 	</head>
 
 	<body>
