Full commit, including changes across a lot of different files. I need to make a better effort at keeping track of these things.

--- a/taskmanager/templates/dashboard/contexts/patients/calendar.html
+++ b/taskmanager/templates/dashboard/contexts/patients/calendar.html
@@ -35,7 +35,7 @@ $(document).ready(function() {
 				title: "{{ task.task.name }}",
 				id: "{{ task.id }}",
 				procname: "{{ task.process.name }}",
-				start: "{{ task.schedule_date }}",
+				start: "{{ task.schedule_date|date:"Y-m-d H:i:s" }}",
 				className: "{{ task.get_status }}_event scheduledtask_event_icon",
 				allDay: false
 			}{% if not forloop.last %},{% endif %}
