Updated scheduler and taskmanager status pages to correctly update status (had to update URLs and push the ports in use through the view). Also updated history to better show the current running state of the task (but this needs more work in the template dispatcher, and tasks).
Please note that the scheduler port is hardcoded in the view, as it's currently set by a command-line switch when invoking the scheduler. This will become a non-issue when the port is set in the settings module as it should be.

--- a/taskmanager/templates/dashboard/contexts/monitor/status_scheduler.html
+++ b/taskmanager/templates/dashboard/contexts/monitor/status_scheduler.html
@@ -60,7 +60,7 @@ $(document).ready(function() {
 
 		// send an AJAX request to the scheduler for its status
 		$.ajax({
-		  url: '/proxy/' + encodeURIComponent('http://localhost:8080/status'),
+		  url: '/taskmanager/proxy/' + encodeURIComponent('http://localhost:{{ scheduler_port }}/status'),
 		  data: { 'json': true },
 		  dataType: 'json',
 		  success: function(data) {
