Temporary fix for patient::history context: don't show status unless they have a timeout date, since nothing will show up there as no tasks update the "details" field yet.

--- a/taskmanager/templates/dashboard/contexts/patients/history.html
+++ b/taskmanager/templates/dashboard/contexts/patients/history.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
 								</tr>
 							{% endfor %}
 
-							{% if instance.status != "completed" %}
+							{% if instance.status != "completed" and instance.timeout_date %}
 								<tr class="state_msg"">
 									<td class="msg_label"><b>state:</b></td>
 									<td class="msg_data">
