Fixed typo in jQuery code that made the new feature unusable. Ouch!

--- a/taskmanager/templates/dashboard/details/taskinstance.html
+++ b/taskmanager/templates/dashboard/details/taskinstance.html
@@ -105,7 +105,7 @@ $(document).ready(function() {
 		});
 	});
 
-	$("poke_button").click(function() {
+	$("#poke_button").click(function() {
 		if (!confirm('Are you sure that you want to poke this task? In most cases, this will cause it to repeat the last sent message.'))
 			return;
 
